--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <ul>
                     <li><a href=""><i class="ra ri-close-circle-fill"></i></a></li>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="#footers">ABOUT</a></li>
                     <li><a href="phppage.html">PROGRAMS</a></li>
-                    <li><a href="">OVERVIEW</a></li>
+                    <li><a href="#footers">OVERVIEW</a></li>
                     <li><a href="phpSyllabus.html">SYLLABUS</a></li>
                 </ul>
             </div>
