--- a/php.html
+++ b/php.html
@@ -25,9 +25,9 @@
                 <ul>
                     <li><a href=""><i class="ra ri-close-circle-fill"></i></a></li>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="/index.html#footers">ABOUT</a></li>
                     <li><a href="phppage.html">PROGRAMS</a></li>
-                    <li><a href="">OVERVIEW</a></li>
+                    <li><a href="php.html">OVERVIEW</a></li>
                     <li><a href="phpSyllabus.html">SYLLABUS</a></li>
                 </ul>
             </div>
