--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <a href="#"><i class="fab fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/princepanwar420/"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <h4 class="copyright">PGGC-11 Copyright © 2023 PGGC-11 - All rights reserved || Designed By : Prince</h4>
+            <h4 class="copyright">PGGC-11 Copyright © 2023 PGGC-11 - All rights reserved | Designed By : Prince</h4>
     </section>
     <script src="script.js"></script>
 </body>
