--- a/phppage.html
+++ b/phppage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="java.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="shortcut icon" href="images/coding.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
