--- a/javapage.html
+++ b/javapage.html
@@ -36,146 +36,24 @@
             <aside>
                 <ul>
                     <li class="intro">Introduction</li>
-                    <li class="program0">Program1</li>
-                    <li class="program1">Program2</li>
-                    <li class="program2">program3</li>
-                    <li class="program3">program4</li>
-                    <li class="program4">program5</li>
-                    <li class="program5">program6</li>
-                    <li class="program6">program7</li>
-                    <li class="program7">program8</li>
-                    <li class="program8">program9</li>
-                    <li class="program9">program10</li>
-                    <li class="program10">Program11</li>
-                    <li class="program11">Program12</li>
-                    <li class="program12">Program13</li>
-                    <li class="program13">Program14</li>
-                    <li class="program14">Program15</li>
-                    <li class="program15">Program16</li>
-                    <li class="program16">Program17</li>
-                    <li class="program17">Program18</li>
-                    <li class="program18">Program19</li>
-                    <li class="program19">Program20</li>
-                    <li class="program20">Program21</li>
-                    <li class="program21">Program22</li>
-                    <li class="program22">Program23</li>
-                    <li class="program23">Program24</li>
-                    <li class="program24">Program25</li>
-                    <li class="program25">Program26</li>
-                    <li class="program26">Program27</li>
-                    <li class="program27">Program28</li>
-                    <li class="program28">Program29</li>
-                    <li class="program29">Program30</li>
-                    <li class="program30">Program31</li>
-                    <li class="program31">Program32</li>
-                    <li class="program32">Program33</li>
-                    <li class="program33">Program34</li>
-                    <li class="program34">Program35</li>
-                    <li class="program35">Program36</li>
-                    <li class="program36">Program37</li>
-                    <li class="program37">Program38</li>
-                    <li class="program38">Program39</li>
-                    <li class="program39">Program40</li>
-                    <li class="program40">Program41</li>
-                    <li class="program41">Program42</li>
-                    <li class="program42">Program43</li>
-                    <li class="program43">Program44</li>
-                    <li class="program44">Program45</li>
-                    <li class="program45">Program46</li>
-                    <li class="program46">Program47</li>
-                    <li class="program47">Program48</li>
-                    <li class="program48">Program49</li>
-                    <li class="program49">Program50</li>
-                    <li class="program50">Program51</li>
-                    <li class="program51">Program52</li>
-                    <li class="program52">Program53</li>
-                    <li class="program53">Program54</li>
-                    <li class="program54">Program55</li>
-                    <li class="program55">Program56</li>
-                    <li class="program56">Program57</li>
-                    <li class="program57">Program58</li>
-                    <li class="program58">Program59</li>
-                    <li class="program59">Program60</li>
-                    <li class="program60">Program61</li>
-                    <li class="program61">Program62</li>
-                    <li class="program62">Program63</li>
-                    <li class="program63">Program64</li>
-                    <li class="program64">Program65</li>
-                    <li class="program65">Program66</li>
-                    <li class="program66">Program67</li>
-                    <li class="program67">Program68</li>
-                    <li class="program68">Program69</li>
-                    <li class="program69">Program70</li>
-                    <li class="program70">Program71</li>
-                    <li class="program71">Program72</li>
-                    <li class="program72">Program73</li>
-                    <li class="program73">Program74</li>
-                    <li class="program74">Program75</li>
-                    <li class="program75">Program76</li>
-                    <li class="program76">Program77</li>
-                    <li class="program77">Program78</li>
-                    <li class="program78">Program79</li>
-                    <li class="program79">Program80</li>
-                    <li class="program80">Program81</li>
-                    <li class="program81">Program82</li>
-                    <li class="program82">Program83</li>
-                    <li class="program83">Program84</li>
-                    <li class="program84">Program85</li>
-                    <li class="program85">Program86</li>
-                    <li class="program86">Program87</li>
-                    <li class="program87">Program88</li>
-                    <li class="program88">Program89</li>
-                    <li class="program89">Program90</li>
-                    <li class="program90">Program91</li>
-                    <li class="program91">Program92</li>
-                    <li class="program92">Program93</li>
-                    <li class="program93">Program94</li>
-                    <li class="program94">Program95</li>
-                    <li class="program95">Program96</li>
-                    <li class="program96">Program97</li>
-                    <li class="program97">Program98</li>
-                    <li class="program98">Program99</li>
-                    <li class="program99">Program100</li>
-                    <li class="program100">Program101</li>
-                    <li class="program101">Program102</li>
-                    <li class="program102">Program103</li>
-                    <li class="program103">Program104</li>
-                    <li class="program104">Program105</li>
-                    <li class="program105">Program106</li>
-                    <li class="program106">Program107</li>
-                    <li class="program107">Program108</li>
-                    <li class="program108">Program109</li>
-                    <li class="program109">Program110</li>
-                    <li class="program110">Program111</li>
-                    <li class="program111">Program112</li>
-                    <li class="program112">Program113</li>
-                    <li class="program113">Program114</li>
-                    <li class="program114">Program115</li>
-                    <li class="program115">Program116</li>
-                    <li class="program116">Program117</li>
-                    <li class="program117">Program118</li>
-                    <li class="program118">Program119</li>
-                    <li class="program119">Program120</li>
-                    <li class="program120">Program121</li>
-                    <li class="program121">program122</li>
-                    <li class="program122">Program123</li>
-                    <li class="program123">Program124</li>
-                    <li class="program124">Program125</li>
-                    <li class="program125">Program126</li>
-                    <li class="program126">Program127</li>
-                    <li class="program127">Program128</li>
-                    <li class="program128">Program129</li>
-                    <li class="program129">Program130</li>
-                    <li class="program130">Program131</li>
-                    <li class="program131">Program132</li>
-                    <li class="program132">Program133</li>
-                    <li class="program133">Program134</li>
-                    <li class="program134">Program135</li>
-                    <li class="program135">Program136</li>
-                    <li class="program136">Program137</li>
-                    <li class="program137">Program138</li>
-                    <li class="program138">Program139</li>
-                    
+                    <li class="program1">2D Arrays</li>
+                    <li class="program2">Applets</li>
+                    <li class="program3">Basic Programming construct</li>
+                    <li class="program4">Data Conversion</li>
+                    <li class="program5">Delegation event model</li>
+                    <li class="program6">Exception handling</li>
+                    <li class="program7">functions</li>
+                    <li class="program8">AWT</li>
+                    <li class="program9">SWINGS</li>
+                    <li class="program10">Inheritance</li>
+                    <li class="program11">Input/Output</li>
+                    <li class="program12">Interfaces</li>
+                    <li class="program13">JDBC</li>
+                    <li class="program14">Multithreading</li>
+                    <li class="program15">OOPs</li>
+                    <li class="program15">Packages</li>
+                    <li class="program16">1D Array</li>
+                    <li class="program18">Strings</li>
                 </ul>
             </aside>
             <section class="contento">
