--- a/javapage.html
+++ b/javapage.html
@@ -57,12 +57,13 @@
                 </ul>
             </aside>
             <section class="contento">
-                <iframe src="php/p0_intoduction_to_php.html"  frameborder="0" width="99%" height="1000px" id="frames"></iframe>
+                <iframe src="/java/p3_Basic_Programming_construct.html"  frameborder="0" width="99%" height="1000px" id="frames"></iframe>
             </section>
         </main>
 
     </div>
 
+    <script src="contentJAVA.js"></script>
     <script src="content2.js"></script>
 </body>
 </html>
