--- a/phppage.html
+++ b/phppage.html
@@ -71,7 +71,7 @@
 
     </div>
 
-    <script src="content.js"></script>
+    <script src="contentPHP.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
