--- a/java/p3_Basic_Programming_construct.html
+++ b/java/p3_Basic_Programming_construct.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>basic programs</title>
-        <link rel="stylesheet" href="/php/comman.css">
+        <link rel="stylesheet" href="comman.css">
 </head>
 
 <body>
