--- a/java/p12_Interfaces.html
+++ b/java/p12_Interfaces.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Interfaces</h1>
                 <ul>
                         <li><a href="#bp1">1. Write a Java program to create an interface Shape with the getArea() method. Create three classes Rectangle, Circle, and Triangle that implement the Shape interface. Implement the getArea() method for each of the three classes..</a></li>
                         <li><a href="#bp2">2. Write a Java program to create a Animal interface with a method called bark() that takes no arguments and returns void. Create a Dog class that implements Animal and overrides speak() to print "Dog is barking".</a></li>
