--- a/java/p1_2dArray.html
+++ b/java/p1_2dArray.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Two Dimensional Arrays</h1>
                 <ul>
                         <li><a href="#bp1">Enter the Matrix of rows and columns entered by the user and print in matrix format.</a></li>
                         <li><a href="#bp2">Program to Add Two Matrices</a></li>
