--- a/java/p3_Basic_Programming_construct.html
+++ b/java/p3_Basic_Programming_construct.html
@@ -10,7 +10,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Basic Programming Construct</h1>
                 <ul>
                         <li><a href="#bp1">Write a java program to print 'Hello World!' on Screen.</a></li>
                         <li><a href="#bp2">Write a java program to print the sum of two numbers</a></li>
