--- a/java/p6_Exception_handling.html
+++ b/java/p6_Exception_handling.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Exception Handling</h1>
                 <ul>
                         <li><a href="#bp1">1. Write a Java pro that throws an exception and catch it using a try-catch block.</a></li>
                         <li><a href="#bp2">2. Write a Java pro to create a method that takes an integer as a parameter and throws an exception if the number is odd.
