--- a/java/p7_Functions.html
+++ b/java/p7_Functions.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Functions</h1>
                 <ul>
                         <li><a href="#bp1">1. Write a Java method to find the smallest number among three numbers.</a></li>
                         <li><a href="#bp2">2. Write a Java method to compute the average of three numbers.
