--- a/java/p8_AWT.html
+++ b/java/p8_AWT.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>CONTENT</h1>
+                <h1>Abstract Window Toolkit (AWT) </h1>
                 <ul>
                         <li><a href="#bp1">1. Create a simple AWT application that displays a button with FlowLayout manager.</a></li>
                         <li><a href="#bp2">2. Create a simple AWT application that displays a button with Custom Layout.
