--- a/javapage.html
+++ b/javapage.html
@@ -38,7 +38,7 @@
                     <li class="intro">Introduction</li>
                     <li class="program1">2D Arrays</li>
                     <li class="program2">Applets</li>
-                    <li class="program3">Basic Programming construct</li>
+                    <li class="program3">Basic Programming</li>
                     <li class="program4">Data Conversion</li>
                     <li class="program5">Delegation event model</li>
                     <li class="program6">Exception handling</li>
