--- a/javapage.html
+++ b/javapage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHP</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <script src="contentJAVA.js"></script> -->
     <link rel="stylesheet" href="java.css">
 </head>
 <body>
