new topics and css also

--- a/java/p10_Inheritance.html
+++ b/java/p10_Inheritance.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Data Conversion</h1>
+                <h1>Inheritance</h1>
                 <ul>
                         <li><a href="#bp1">1. Write a Java pro to create a class called Animal with a method called makeSound(). Create a subclass called Cat that overrides the makeSound() method to bark..</a></li>
                         <li><a href="#bp2">2. Write a Java pro to create a class called Vehicle with a method called drive(). Create a subclass called Car that overrides the drive() method to print "Repairing a car"..
