--- a/java/p11_Input_Output.html
+++ b/java/p11_Input_Output.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Functions</h1>
+                <h1>Input/Output</h1>
                 <ul>
                         <li><a href="#bp1">1. Enter the character from user using InputStreamReader.</a></li>
                         <li><a href="#bp2">2. Enter the string from user using BufferedStreamReader.
