--- a/java/p13_JDBC.html
+++ b/java/p13_JDBC.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Functions</h1>
+                <h1>Java Database Connectivity (JDBC)</h1>
                 <ul>
                         <li><a href="#bp1">1. Create the connection with MySQL Database and manage the driver.</a></li>
                         <li><a href="#bp2">2. Create the table in the database from Java API.
