--- a/java/p14_Multithreading.html
+++ b/java/p14_Multithreading.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Exception Handling</h1>
+                <h1>Multi Threading</h1>
                 <ul>
                         <li><a href="#bp1">1. Write a Java program to create a basic Java thread that prints "Hello, World!" when executed.</a></li>
                         <li><a href="#bp2">2.  Write a Java program that creates two threads to find and print even and odd numbers from 1 to 20.
