--- a/java/p17_1dArray.html
+++ b/java/p17_1dArray.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Data Conversion</h1>
+                <h1>Single Dimension Arrays</h1>
                 <ul>
                         <li><a href="#bp1">1. Program to copy all elements of one array into another array.</a></li>
                         <li><a href="#bp2">2. Program to find the frequency of each element in the arra
