--- a/java/p18_Strings.html
+++ b/java/p18_Strings.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Data Conversion</h1>
+                <h1>Strings</h1>
                 <ul>
                         <li><a href="#bp1">1. pro to Check if a String contains only digits?</a></li>
                         <li><a href="#bp2">2. pro to perform Deep Copy for String?
