--- a/java/p2_Applets.html
+++ b/java/p2_Applets.html
@@ -9,7 +9,7 @@
 
 <body>
         <div id="home">
-                <h1>Two Dimensional Arrays</h1>
+                <h1>Applets</h1>
                 <ul>
                         <li><a href="#bp1">1. Create an applet showing the string "Hello World" which is embedded in the HTML page.</a></li>
                         <li><a href="#bp2">2. Create an applet showing the string "Hello World" which is executed by an appletviewer.</a></li>
