--- a/javapage.html
+++ b/javapage.html
@@ -36,7 +36,7 @@
                 </frameset> -->
             <aside>
                 <ul>
-                    <li class="intro">Introduction</li>
+                    <!-- <li class="intro">Introduction</li> -->
                     <li class="program1">2D Arrays</li>
                     <li class="program2">Applets</li>
                     <li class="program3">Basic Programming</li>
@@ -52,8 +52,8 @@
                     <li class="program13">JDBC</li>
                     <li class="program14">Multithreading</li>
                     <li class="program15">OOPs</li>
-                    <li class="program15">Packages</li>
-                    <li class="program16">1D Array</li>
+                    <li class="program16">Packages</li>
+                    <li class="program17">1D Array</li>
                     <li class="program18">Strings</li>
                 </ul>
             </aside>
