--- a/java/p13_JDBC.html
+++ b/java/p13_JDBC.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2dArray</title>
+    <title>JDBC</title>
     <link rel="stylesheet" href="comman.css">
 </head>
 
