--- a/java/p3_Basic_Programming_construct.html
+++ b/java/p3_Basic_Programming_construct.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>basic programs</title>
+        <title>Basic Programming Construct</title>
         <link rel="stylesheet" href="comman.css">
 </head>
 
