--- a/javapage.html
+++ b/javapage.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHP</title>
+    <title>JAVA</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- <script src="contentJAVA.js"></script> -->
+    <link rel="shortcut icon" href="images/coding.png" type="image/x-icon">
     <link rel="stylesheet" href="java.css">
 </head>
 <body>
@@ -58,7 +59,7 @@
                 </ul>
             </aside>
             <section class="contento">
-                <iframe src="/java/p3_Basic_Programming_construct.html"  frameborder="0" width="99%" height="1000px" id="frames"></iframe>
+                <iframe src="./java/p3_Basic_Programming_construct.html"  frameborder="0" width="99%" height="1000px" id="frames"></iframe>
             </section>
         </main>
 
